Actions
Bug #13090
closedjunk characters in `zpool online -e` EACCES error message
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Here's my /etc/os-release:
NAME="OmniOS" PRETTY_NAME="OmniOS Community Edition v11 r151034m" CPE_NAME="cpe:/o:omniosce:omnios:11:151034:13" ID=omnios VERSION=r151034m VERSION_ID=r151034m BUILD_ID=151034.13.2020.07.24 HOME_URL="https://omniosce.org/" SUPPORT_URL="https://omniosce.org/" BUG_REPORT_URL="https://github.com/omniosorg/omnios-build/issues/new"
I tried to expand a zpool vdev without running as root and I got this error:
$ zpool online -e rpool c1t0d0 @?8???D: cannot relabel 'c1t0d0s0': unable to open device cannot expand c1t0d0: permission denied $
The error message is correct, but the junk on the first line looks like uninitialized memory.
Updated by Matt Fiddaman about 1 year ago
- Status changed from New to In Progress
Updated by Matt Fiddaman about 1 year ago
- Category set to zfs - Zettabyte File System
Updated by Matt Fiddaman 12 months ago
I tested this change by running the command before the change:
matt@beetroot:/data/build/illumos-gate% zpool online -e data c0t2d1 0: cannot relabel 'c0t2d1s0': unable to open device cannot expand c0t2d1: permission denied
And it had the random characters at the start, as well as another error message that was being thrown lower down the code (the second output line)
Then I ran the same command after the fix, and it resulted in the expected output, found below.
matt@beetroot:/data/build/illumos-gate% LD_LIBRARY_PATH=proto/root_i386/usr/lib/amd64 zpool online -e data c0t2d1 cannot expand c0t2d1: cannot relabel 'c0t2d1s0': unable to open device
Updated by Matt Fiddaman 12 months ago
- Status changed from In Progress to Pending RTI
Updated by Electric Monk 12 months ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 5cf013a3c9d3f3ca3a892f013ac067904135da06
commit 5cf013a3c9d3f3ca3a892f013ac067904135da06 Author: Etienne Dechamps <etienne.dechamps@ovh.net> Date: 2021-05-29T21:35:10.000Z 13090 junk characters in `zpool online -e` EACCES error message Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Dan McDonald <danmcd@joyent.com>
Actions